WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
251791
REGRESSION(
258658@main
): [GStreamer][WebRTC] Broke webrtc/multi-video.html
https://bugs.webkit.org/show_bug.cgi?id=251791
Summary
REGRESSION(258658@main): [GStreamer][WebRTC] Broke webrtc/multi-video.html
Philippe Normand
Reported
2023-02-06 06:39:52 PST
The incoming mediastream has only one track instead of 6 expected.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2023-02-06 07:28:10 PST
Pull request:
https://github.com/WebKit/WebKit/pull/9689
EWS
Comment 2
2023-02-07 01:43:38 PST
Committed
259953@main
(9512db61a188): <
https://commits.webkit.org/259953@main
> Reviewed commits have been landed. Closing PR #9689 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-02-07 01:44:17 PST
<
rdar://problem/105118999
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug