Cherry-pick 259953@main (9512db61a188). https://bugs.webkit.org/show_bug.cgi?id=251791

REGRESSION(258658@main): [GStreamer][WebRTC] Broke webrtc/multi-video.html
    https://bugs.webkit.org/show_bug.cgi?id=251791

    Reviewed by Xabier Rodriguez-Calvar.

    The msid fallback assignment mechanism was not working as expected. In cases where the pad msid
    property was not set, the resulting mediaStreamId was the pad name, no msid lookup was performed in
    the SDP.

    * Source/WebCore/Modules/mediastream/gstreamer/GStreamerMediaEndpoint.cpp:
    (WebCore::GStreamerMediaEndpoint::requestPad):
    (WebCore::GStreamerMediaEndpoint::addRemoteStream):

    Canonical link: https://commits.webkit.org/259953@main